public enum ESTADO {
    DISPONIBLE, PRESTADO
}
