@startuml
class Biblioteca{
+mostrarColeccion()
+agregarLibro()
+prestarlibro()
+devolver()
}
class Libro{
-titulo
-autor
-ISBN
}
enum Estado{
DISPONIBLE
PRESTADO
}
class Registro{
-informacionDeLibro
+mostrarInformacion()
}
Biblioteca "1..*"--> Libro
Biblioteca --> Registro
Libro --> Estado


@enduml